...
            Button(
                onClick = {
                    showDialog = true
                }, modifier = Modifier
                    .padding(16.dp)
            ) {
                Text("Add new Station")
            }

            if (showDialog) {
                AddMarkerDialog(
                    onDismiss = { showDialog = false },
                    onAdd = { station ->
...
