...
        Button(
            onClick = {
                showDialog = true
            }, modifier = Modifier
                .padding(16.dp)
        ) {
            Text("Add new Trail")
        }

        if (showDialog) {
            AddTrailDialog(
                onDismiss = { showDialog = false },
                onAdd = { trailName ->
...
